Refactor: Refactor for a more readable code.