@@ -15,7 +15,10 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import javafx.event.ActionEvent;
+import javafx.event.EventHandler;
 import javafx.geometry.Pos;
+import javafx.scene.Node;
 import javafx.scene.Scene;
 import javafx.scene.control.Alert;
 import javafx.scene.control.Button;
@@ -253,7 +256,7 @@ public class MainPageView extends Scene implements ChaosGameObserver {
 
   /**
    * Creates the add panel for adding new transformations. It uses combobox to give the alternative
-   * transformation type, buttons to save, cancel and add to file button. And text fields to give
+   * transformation type, buttons to save, cancel, and add to file button, and text fields to give
    * start vector, input vector, and the necessary matrix.
    *
    * @return The add panel.
@@ -263,96 +266,71 @@ public class MainPageView extends Scene implements ChaosGameObserver {
     TextField transformationName = createTextField("transformation name");
     ComboBox<TransformationType> transformationComboBox = createTransformationComboBox();
     HBox transformationInputField = createTransformationInputField(transformationComboBox);
+    HBox startVectorField = createVectorHbox(Arrays.asList("x0", "y0"));
+    HBox endVectorField = createVectorHbox(Arrays.asList("x0", "y0"));
 
-    HBox startVectorField = createtransformationHbox(Arrays.asList("x0", "y0"));
-    HBox endVectorField = createtransformationHbox(Arrays.asList("x0", "y0"));
-
-    Button saveButton =
-        createSaveButton(transformationName, transformationComboBox, transformationInputField,
-        startVectorField, endVectorField);
-    Button cancelButton = createCancelButton();
-    Button addFileButton = createAddFileButton();
-
-    addPanel.getChildren()
-        .addAll(transformationName, transformationComboBox,
-            transformationInputField, startVectorField, endVectorField,
-            saveButton, cancelButton, addFileButton);
+    addPanel.getChildren().addAll(transformationName, transformationComboBox, transformationInputField, startVectorField, endVectorField,
+        createButton("Save", e -> saveTransformation(transformationName, transformationComboBox, transformationInputField, startVectorField, endVectorField)),
+        createButton("Cancel", e -> render()), createButton("Add File", e -> uploadFile()));
     StackPane.setAlignment(addPanel, Pos.BOTTOM_LEFT);
 
     return addPanel;
   }
 
   /**
-   * Creates the main panel.
+   * Creates a generic VBox panel with spacing and alignment.
    *
    * @return a VBox configured as the main panel.
    */
-
   private VBox createMainPanel() {
-    VBox addPanel = new VBox(10);
-    addPanel.getStyleClass().add("add-panel");
-    addPanel.setAlignment(Pos.CENTER);
-    return addPanel;
+    VBox panel = new VBox(10);
+    panel.getStyleClass().add("add-panel");
+    panel.setAlignment(Pos.CENTER);
+    return panel;
   }
 
   /**
-   * Creates the transformation ComboBox.
+   * Creates a ComboBox populated with transformation types.
    *
    * @return a ComboBox populated with transformation types.
    */
-
   private ComboBox<TransformationType> createTransformationComboBox() {
-    ComboBox<TransformationType> transformationComboBox = new ComboBox<>();
-    transformationComboBox.getItems().addAll(TransformationType.values());
-    transformationComboBox.setPromptText("Select Transformation");
-    return transformationComboBox;
+    ComboBox<TransformationType> comboBox = new ComboBox<>();
+    comboBox.getItems().addAll(TransformationType.values());
+    comboBox.setPromptText("Select Transformation");
+    return comboBox;
   }
 
   /**
-   * Enumeration of transformation types.
+   * Enum representing the types of transformations.
    */
-
   public enum TransformationType {
-    JULIA,
-    AFFINE,
+    JULIA, AFFINE
   }
 
   /**
-   * Creates the transformation input field container.
+   * Creates the transformation input field container and sets up its update behavior.
    *
    * @param transformationComboBox the ComboBox for selecting transformation types.
    * @return an HBox containing the input fields for transformations.
    */
-
   private HBox createTransformationInputField(ComboBox<TransformationType> transformationComboBox) {
-    HBox transformationInputField = new HBox();
-    transformationInputField.setSpacing(10);
-
-    transformationComboBox.setOnAction(
-        e -> updateTransformationFields(transformationComboBox, transformationInputField));
-    updateTransformationFields(transformationComboBox, transformationInputField);
-
-    return transformationInputField;
+    HBox inputField = new HBox(10);
+    transformationComboBox.setOnAction(e -> updateTransformationFields(transformationComboBox, inputField));
+    updateTransformationFields(transformationComboBox, inputField);
+    return inputField;
   }
 
   /**
    * Updates the transformation input fields based on the selected transformation type.
    *
-   * @param comboBox   the ComboBox for selecting transformation types.
+   * @param comboBox the ComboBox for selecting transformation types.
    * @param inputField the HBox containing the input fields for transformations.
    */
-
   private void updateTransformationFields(ComboBox<TransformationType> comboBox, HBox inputField) {
     inputField.getChildren().clear();
     if (comboBox.getValue() != null) {
-      switch (comboBox.getValue()) {
-        case JULIA:
-          inputField.getChildren().add(createJuliaTransformationVbox());
-          break;
-        case AFFINE:
-          inputField.getChildren().add(createAffineTransformationVbox());
-          break;
-      }
+      inputField.getChildren().add(createTransformationVbox(comboBox.getValue() == TransformationType.AFFINE, comboBox.getValue() == TransformationType.JULIA ? Arrays.asList("Real part", "Imaginary part") : null));
     }
   }
 
@@ -362,7 +340,6 @@ public class MainPageView extends Scene implements ChaosGameObserver {
    * @param promptText the prompt text for the TextField.
    * @return a configured TextField.
    */
-
   private TextField createTextField(String promptText) {
     TextField textField = new TextField();
     textField.setPromptText(promptText);
@@ -370,150 +347,94 @@ public class MainPageView extends Scene implements ChaosGameObserver {
   }
 
   /**
-   * Creates the save button.
+   * Creates a generic button with the specified label and action.
    *
-   * @param transformationComboBox   the ComboBox for selecting transformation types.
-   * @param transformationInputField the HBox containing the input fields for transformations.
-   * @param startVectorField         the TextField for the start vector.
-   * @param endVectorField           the TextField for the end vector.
-   * @return a configured save Button.
+   * @param label the label for the button.
+   * @param eventHandler the event handler for the button action.
+   * @return a configured Button.
    */
-
-  private Button createSaveButton(TextField transformationName,
-      ComboBox<TransformationType> transformationComboBox, HBox transformationInputField,
-      HBox startVectorField, HBox endVectorField) {
-    Button saveButton = new Button("Save");
-    saveButton.getStyleClass().add("button");
-    saveButton.setOnAction(e -> {
-      List<Transform2D> list = getInputInformation(transformationComboBox.getValue(),
-          transformationInputField);
-      Vector2d startVector = getInputVector(startVectorField);
-      Vector2d endVector = getInputVector(endVectorField);
-      controller
-          .addCustomTransformation(startVector, endVector, list, transformationName.getText());
-    });
-    return saveButton;
-  }
-
-  /**
-   * Creates the cancel button.
-   *
-   * @return a configured cancel Button.
-   */
-
-  private Button createCancelButton() {
-    Button cancelButton = new Button("Cancel");
-    cancelButton.getStyleClass().add("button");
-    cancelButton.setOnAction(e -> {
-      render();
-    });
-    return cancelButton;
-  }
-
-  private Button createAddFileButton() {
-    Button addFileButton = new Button("Add File");
-    addFileButton.getStyleClass().add("button");
-    addFileButton.setOnAction(e -> {
-      uploadFile();
-    });
-    return addFileButton;
-  }
-
-  /**
-   * Creates a VBox containing the input field for Julia transformation.
-   *
-   * @return a VBox configured for Julia transformation input.
-   */
-  private VBox createJuliaTransformationVbox() {
-    return createTransformationVbox(Arrays.asList("Real part", "Imaginary part"));
-  }
-
-  /**
-   * Creates a VBox containing the input fields for affine transformations.
-   *
-   * @return a VBox configured for affine transformation inputs.
-   */
-  private VBox createAffineTransformationVbox() {
-    VBox transformationsBox = new VBox(5);
-    Button addTransformationButton = new Button("Add Transformation");
-    addTransformationButton.setOnAction(e -> {
-      HBox matrixHbox = createtransformationHbox(Arrays.asList("X0", "Y0", "X1", "Y1", "V0", "V1"));
-      transformationsBox.getChildren().add(matrixHbox);
-    });
-    transformationsBox.getChildren().add(addTransformationButton);
-    return transformationsBox;
+  private Button createButton(String label, EventHandler<ActionEvent> eventHandler) {
+    Button button = new Button(label);
+    button.getStyleClass().add("button");
+    button.setOnAction(eventHandler);
+    return button;
   }
 
   /**
    * Creates a VBox containing input fields for transformations.
    *
-   * @param promptTexts array of prompt texts for the TextFields.
+   * @param isAffine indicates if the VBox is for affine transformations.
+   * @param promptTexts list of prompt texts for the TextFields.
    * @return a VBox configured with input TextFields.
    */
-  private VBox createTransformationVbox(List<String> promptTexts) {
-    VBox tranformationVbox = new VBox(10);
-    HBox transformationHbox = createtransformationHbox(promptTexts);
-    tranformationVbox.getChildren().add(transformationHbox);
-    return tranformationVbox;
+  private VBox createTransformationVbox(boolean isAffine, List<String> promptTexts) {
+    VBox vbox = new VBox(isAffine ? 5 : 10);
+    if (isAffine) {
+      vbox.getChildren().add(createButton("Add Transformation", e -> vbox.getChildren().add(createVectorHbox(Arrays.asList("X0", "Y0", "X1", "Y1", "V0", "V1")))));
+    } else if (promptTexts != null) {
+      vbox.getChildren().add(createVectorHbox(promptTexts));
+    }
+    return vbox;
   }
 
   /**
    * Creates an HBox containing input fields for transformations.
    *
-   * @param promptTexts array of prompt texts for the TextFields.
+   * @param promptTexts list of prompt texts for the TextFields.
    * @return an HBox configured with input TextFields.
    */
-  private HBox createtransformationHbox(List<String> promptTexts) {
-    HBox transformationHbox = new HBox(10);
+  private HBox createVectorHbox(List<String> promptTexts) {
+    HBox hbox = new HBox(10);
     for (String promptText : promptTexts) {
-      TextField textField = createTextField(promptText);
-      transformationHbox.getChildren().add(textField);
+      hbox.getChildren().add(createTextField(promptText));
     }
-    return transformationHbox;
+    return hbox;
+  }
+
+  /**
+   * Saves the transformation with the given parameters.
+   *
+   * @param transformationName the name of the transformation.
+   * @param transformationComboBox the ComboBox for selecting transformation types.
+   * @param transformationInputField the HBox containing the input fields for transformations.
+   * @param startVectorField the TextField for the start vector.
+   * @param endVectorField the TextField for the end vector.
+   */
+  private void saveTransformation(TextField transformationName, ComboBox<TransformationType> transformationComboBox, HBox transformationInputField, HBox startVectorField, HBox endVectorField) {
+    List<Transform2D> transformations = getInputInformation(transformationComboBox.getValue(), transformationInputField);
+    Vector2d startVector = getInputVector(startVectorField);
+    Vector2d endVector = getInputVector(endVectorField);
+    controller.addCustomTransformation(startVector, endVector, transformations, transformationName.getText());
   }
 
   /**
    * Retrieves input information based on the selected transformation type.
    *
-   * @param selectedTransformation   the selected transformation type.
-   * @param transformationInputField the HBox containing the input fields.
+   * @param selectedTransformation the selected transformation type.
+   * @param transformationInputField the HBox containing the input fields for transformations.
    * @return a list of Transform2D objects.
    */
-  private List<Transform2D> getInputInformation(TransformationType selectedTransformation,
-      HBox transformationInputField) {
-    List<Transform2D> list = new ArrayList<>();
-    if (selectedTransformation != null) {
-      switch (selectedTransformation) {
-        case JULIA:
-          list.addAll(getJuliaTransformation(transformationInputField));
-          break;
-        case AFFINE:
-          list.addAll(getAffineTransformation(transformationInputField));
-          break;
-      }
+  private List<Transform2D> getInputInformation(TransformationType selectedTransformation, HBox transformationInputField) {
+    if (selectedTransformation == TransformationType.JULIA) {
+      return getJuliaTransformation(transformationInputField);
+    } else if (selectedTransformation == TransformationType.AFFINE) {
+      return getAffineTransformation(transformationInputField);
     }
-    return list;
+    return new ArrayList<>();
   }
+
   /**
    * Retrieves input information for the Julia transformation.
    *
-   * @param transformationInputField the HBox containing the input fields for the Julia
-   *                                 transformation.
-   *
+   * @param transformationInputField the HBox containing the input fields for the Julia transformation.
    * @return a list of Transform2D objects for the Julia transformation.
    */
-
   private List<Transform2D> getJuliaTransformation(HBox transformationInputField) {
     List<Transform2D> list = new ArrayList<>();
     if (!transformationInputField.getChildren().isEmpty()) {
-      VBox juliaVbox = (VBox) transformationInputField.getChildren().getFirst();
-      HBox juliaFields = (HBox) juliaVbox.getChildren().getFirst();
-
-      double realPart = parseDoubleFromTextField(juliaFields, 0);
-      double imaginaryPart = parseDoubleFromTextField(juliaFields, 1);
-
-      Complex complex = new Complex(realPart, imaginaryPart);
-      list.add(new JuliaTransform(complex, 1));
+      VBox juliaVbox = (VBox) transformationInputField.getChildren().get(0);
+      HBox juliaFields = (HBox) juliaVbox.getChildren().get(0);
+      list.add(new JuliaTransform(new Complex(parseDoubleFromTextField(juliaFields, 0), parseDoubleFromTextField(juliaFields, 1)), 1));
     }
     return list;
   }
@@ -521,16 +442,15 @@ public class MainPageView extends Scene implements ChaosGameObserver {
   /**
    * Retrieves input information for the Affine transformation.
    *
-   * @param transformationInputField the HBox containing the input fields for the
-   *                                 Affine transformation.
+   * @param transformationInputField the HBox containing the input fields for the Affine transformation.
    * @return a list of Transform2D objects for the Affine transformation.
    */
   private List<Transform2D> getAffineTransformation(HBox transformationInputField) {
     List<Transform2D> list = new ArrayList<>();
     if (!transformationInputField.getChildren().isEmpty()) {
-      VBox affineVbox = (VBox) transformationInputField.getChildren().getFirst();
-      for (int i = 1; i < affineVbox.getChildren().size(); i++) {
-        HBox matrixFields = (HBox) affineVbox.getChildren().get(i);
+      VBox affineVbox = (VBox) transformationInputField.getChildren().get(0);
+      for (Node node : affineVbox.getChildren().subList(1, affineVbox.getChildren().size())) {
+        HBox matrixFields = (HBox) node;
 
         double x0 = parseDoubleFromTextField(matrixFields, 0);
         double y0 = parseDoubleFromTextField(matrixFields, 1);
@@ -551,13 +471,10 @@ public class MainPageView extends Scene implements ChaosGameObserver {
    * Retrieves the input vector from an HBox.
    *
    * @param vectorHbox the HBox containing the input fields for the vector.
-   *
    * @return a Vector2d object representing the input vector.
    */
   private Vector2d getInputVector(HBox vectorHbox) {
-    double v0 = parseDoubleFromTextField(vectorHbox, 0);
-    double v1 = parseDoubleFromTextField(vectorHbox, 1);
-    return new Vector2d(v0, v1);
+    return new Vector2d(parseDoubleFromTextField(vectorHbox, 0), parseDoubleFromTextField(vectorHbox, 1));
   }
 
   /**
@@ -568,8 +485,7 @@ public class MainPageView extends Scene implements ChaosGameObserver {
    * @return the parsed double value.
    */
   private double parseDoubleFromTextField(HBox hbox, int index) {
-    TextField textField = (TextField) hbox.getChildren().get(index);
-    return Double.parseDouble(textField.getText());
+    return Double.parseDouble(((TextField) hbox.getChildren().get(index)).getText());
   }
 
   /**
@@ -618,14 +534,5 @@ public class MainPageView extends Scene implements ChaosGameObserver {
     xField.setText(String.format("X: %.1f", x));
     yField.setText(String.format("Y: %.1f", y));
   }
-
-
-
-
-
-
-
-
-
 
 }
